# cpp_template

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  Example.cpp  Example.h  main.cpp
tests/unit_tests/: CMakeLists.txt  test_example.cpp
